# drink-ordering-app

./: .env.example  README.md  config-overrides.js  package-lock.json  package.json
public/admin/: index.html
server/: Cargo.toml  orders.db
server/src/: db.rs  handlers.rs  main.rs  models.rs  serial_comm.rs
src/: App.css  App.js
src/admin/: index.css  index.js
src/components/: AddressSelector.js  Cart.js  CategoryMenu.js  Checkout.css  Checkout.js  DrinkContext.js  DrinkItem.js  DrinkList.js  Navbar.css  Navbar.js  NotFound.css  NotFound.js  OrderConfirmation.css  OrderConfirmation.js  OrderLookup.css  OrderLookup.js
src/components/admin/: AdminPanel.css  AdminPanel.js  OrderDetail.css  OrderDetail.js  OrderList.css  OrderList.js
src/data/: drinks.js
